<resources>
    <string name="app_name">Easy Reward</string>
    <string name="error_info">Sorry, you can not use the app for some unknown reasons. You can try again in the following ways:\n 1. If VPN is turned on, please turn off VPN. \n2. If the mobile phone is root, please change the phone. \n3. Your IP may be identified as a cheating user. Please use the normal IP. \nThank you for your support of our app</string>
    <string name="exit">Exit</string>
    <string name="infos">Your network is unstable, please check the network</string>
    <string name="login_google">Login Google</string>
    <string name="agree">The Privacy Policy and User Agreement</string>
    <string name="goon">Start means you agree to</string>
    <string name="login">Login…</string>
    <string name="privacy">Privacy Policy</string>
    <string name="loading">loading…</string>
    <string name="invite">Invite</string>
    <string name="well_ex"> Well Experience</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_fragment">Explore</string>
    <string name="play_fragment">My Apps</string>
    <string name="set_fragment">Setting</string>
    <string name="work_fragment">Enjoy</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="finish_copy">You have copy the invitation code!</string>
    <string name="invite_desc">Invite your friends by below code to use this App and reward you points.</string>
    <string name="share_friend">Hi,my dear friends ,I am using the app "Amusing Reward" now,you can get rewards from it,also you can experience the APP from the
        link: https://play.google.com/store/apps/details?id=com.amusing.cash.well.fun  ,when you first open it ,you can input my invitation code :</string>
    <string name="point_details">Points Detail</string>
    <string name="no_more">No more data</string>
    <string name="click_more">Click to refresh data.</string>
    <string name="contact">Contact us</string>
    <string name="walk">Exercise steps</string>
    <string name="go_on">Contact</string>
    <string name="go_">Go ></string>
    <string name="sign_aldec">You have check-in today </string>
    <string name="sign_dec">Daily check-in to  get points</string>
    <string name="video_dec">Do you want to watch video to get more points?</string>
    <string name="no_video">Sorry, no video to show!</string>
    <string name="task_ok">You have completed the task !</string>
    <string name="complete">Completed</string>
    <string name="progress">Progress</string>
    <string name="success">Success</string>
    <string name="success_reward">Points received</string>
    <string name="fill_content">Input your invitation code that your friends share you,and you can get points.</string>
    <string name="fill_hint">Invitation code</string>
    <string name="sure">Submit </string>
    <string name="contact_code">Sorry,error code!</string>
    <string name="finish_contact">You have finish the code!</string>
    <string name="code_null">Invitation code can not be null!</string>
    <string name="feedback_ok">Thank you for your feedback</string>
    <string name="feedback_error">You miss somethings,you should input all!</string>
    <string name="input_feedback">Input your feedback</string>
    <string name="name">Input your name</string>
    <string name="email">Input your Email</string>
    <string name="feedback">Suggestion</string>
    <string name="record">Pay Records</string>
    <string name="no_record">You have not records</string>
    <string name="no_task">You have not activity in progress</string>
    <string name="minutes">minutes used</string>
    <string name="status1">Pending</string>
    <string name="refresh">Refresh…</string>
    <string name="load">Loading…</string>
    <string name="status2">Completed</string>
    <string name="status3">Failed</string>
    <string name="status4">Refused</string>
    <string name="exchange">Exchange</string>
    <string name="start_work">To count correctly and earn coins, click the "Start" button to activate the app.</string>
    <string name="usage">In order to  correctly calculate the duration and reward you with coins,please turn on the app usage permission first.</string>
    <string name="no_ad">Sorry, no AD to show.</string>
    <string name="points">points</string>
    <string name="goal">Daily goal</string>
    <string name="per_title">Tip</string>
    <string name="per3">There is only one chance to exchange the reward once a day, and then the number of steps will not be redeemable for points. Are you sure to redeem?</string>
    <string name="per1">In order to record the steps of your motion more accurately, need to obtain the motion data of your phone.</string>
    <string name="per2">In order to show the number of movement steps when you are moving and when you lock the screen, need to obtain the pop-up window permission of your phone.</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="rule">Change one Coin every 10xx steps,the more you walk,the more you earn,you can exchange 1,200xx Coin for 10,000xx steps </string>
    <string name="sign">Check-in everyday and get points</string>
    <string name="check">Check-in</string>
    <string name="video_sign">Check-in with video</string>
    <string name="signed">Signed</string>
    <string name="video">Get points by watch video</string>
    <string name="walls">This is a wall for you that you can get unless points by task </string>
    <string name="yes_s">Yes</string>
    <string name="gostep">Exercise steps to Points</string>
    <string name="desc_pro">You points now is xxx,when you is 100%,you can exchange reward.</string>
    <string name="requirements">Requirements:</string>
    <string name="no_n">No</string>
    <string name="my_n"> My account</string>
    <string name="cancel">Cancel</string>
    <string name="turnon">Turn on</string>
    <string name="userinfo">Input your invitation code that your friends share you,and you can get points.</string>
    <string name="policy">Privacy Policy</string>
    <string name="details">Details</string>
    <string name="receive_fail">Get Task failed! </string>
    <string name="locked">Locked</string>
    <string name="isnotime">It is not time for the task to start. </string>
    <string name="start_task">The task has started. </string>
    <string name="go_step">of step 0 </string>
    <string name="withdrawal">Redeem</string>
    <string name="receive"> Receive</string>
    <string name="enough">Sorry, you don not have enough points</string>
    <string name="pay_title">Redeem  account </string>
    <string name="pay_empty">Redeem  account can not be null.</string>
    <string name="two_same">The redeem accounts entered twice are inconsistent.</string>
    <string name="input_account">You can redeem now </string>
    <string name="success_account"> Redeem success </string>
    <string name="open_account"> Please open your wallet check the money in the account</string>
    <string name="pay_email">Please input your redeem  account  for twice </string>

    <string name="img1">Happy Reward finds good games for you </string>
    <string name="img2">Get coins while you playing games </string>
    <string name="img3"> Exchange the reward you want with coins </string>
    <string name="guide_item">Complete tasks to win a lot of coins</string>
    <string name="know">I Know</string>
    <string name="newfit">Newbie benefits</string>
    <string name="playgame">Play games or apps to earn more coins.</string>
    <string name="discover">Explore new games in "Discover" anytime</string>
    <string name="toptip">Here is your coins.Complete task to gain coins.The higher the coin the higher the reward</string>
    <string name="first_step">This is the first step of the task.The more steps you complete,the more rewards you get!</string>
    <string name="start_tip">Click "Start" to start the task!</string>
    <string name="des_tip">Want to get all the coins? \n \n1. We recommend new users; \n2. Experience through PlayWell,must meet task requirements; \n3. Experience applicationin-depth, use core functions,experience several days in a row; \n4. Ensure environment network
and device status is normal.</string>
    <string name="goin">OnGoing</string>
    <string name="daily">Daily</string>
    <string name="unenough">Only xxx coins left to redeem!</string>
    <string name="finished">Congratulations,you can redeem~</string>
    <string name="day">Day</string>
    <string name="load_failed">load more failed</string>
    <string name="header_failed">Refresh Failed</string>
    <string name="header_finish">Refresh Success</string>
    <string name="header_loading">Wait For Loading…</string>
    <string name="header_pulling">Pull Down To Refresh</string>
    <string name="header_refreshing">Refreshing…</string>
    <string name="header_release">Release To Refresh</string>
    <string name="header_secondary">Release To Second Floor</string>
    <string name="header_update">\'Last Update\' M-d HH:mm</string>
    <string name="guide_with">Coins can be exchanged for cash, and the larger the exchanged amount, the greater the discount. Different amounts can be exchanged once a day.</string>
</resources>