<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:fitsSystemWindows="true">
    <include layout="@layout/mytoolbar"/>

    <com.rebater.cash.well.fun.obb.MyNettedView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edit_suggestion"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:background="@drawable/dra_pic"
                android:gravity="center_vertical"
                android:hint="@string/input_feedback"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_black" />


            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:background="@drawable/dra_points"
                android:hint="@string/name"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_black" />


            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:background="@drawable/dra_points"
                android:hint="@string/email"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_black" />


            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/dra_button"
                android:text="@string/sure"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </com.rebater.cash.well.fun.obb.MyNettedView>
</LinearLayout>