<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dra_with"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/title"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/per_title"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/content"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/des_tip"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/yes_button"
        android:text="@string/know"
        android:layout_marginTop="18dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/dra_button"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <View
        app:layout_constraintTop_toBottomOf="@id/yes_button"
        android:layout_width="match_parent"
        android:layout_height="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>