<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/dra_with"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/close"
        android:src="@drawable/close_icon"
        android:layout_width="34dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_gravity="end"
        android:layout_height="34dp"/>
    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="22dp"
        android:src="@drawable/sesan_icon"/>
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:text="@string/success_account"/>
    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/bottom_grep"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:text="@string/open_account"/>

    <Button
        android:id="@+id/extra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_margin="16dp"
        android:background="@drawable/dra_green"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="24dp"/>
</LinearLayout>