<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:fitsSystemWindows="true">
    <include layout="@layout/mytoolbar"/>
    <LinearLayout
        android:id="@+id/code_dialog"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="42dp"
        android:background="@drawable/dra_points"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:src="@drawable/friend_icon"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/text_black"
            android:textSize="22sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:text="@string/app_name"/>
        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:text="@string/fill_content"/>

        <EditText
            android:id="@+id/confirmation_code"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:textColorHint="@color/text_black"
            android:layout_margin="16dp"
            android:textColor="@color/text_black"
            android:hint="@string/fill_hint"
            android:layout_height="48dp"/>

        <Button
            android:id="@+id/sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_margin="22dp"
            android:background="@drawable/dra_button"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="24dp"/>
    </LinearLayout>
</LinearLayout>