<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/reward_icon"
    android:gravity="center_horizontal"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/newfit"
        android:textColor="@color/text_black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="18dp"
        android:text="10000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/button_red"
        android:textSize="42sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/playgame"
        android:textColor="@color/black"
        android:textSize="14sp"
        />
    <Button
        android:id="@+id/receive"
        android:background="@drawable/dra_rev"
        android:layout_width="wrap_content"
        android:text="@string/receive"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:visibility="visible"
        android:layout_marginTop="92dp"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:textColor="@color/gored_"
        android:layout_height="wrap_content"/>


</LinearLayout>