<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dra_with"

    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/title"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/per_title"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/img"
        android:layout_marginTop="12dp"
        android:src="@drawable/useage_icon"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="114dp"
        android:layout_height="114dp"/>
    <TextView
        android:id="@+id/content"
        app:layout_constraintTop_toBottomOf="@id/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="14sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/per1"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:id="@+id/button"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/yes_button"
            android:text="@string/turnon"
            android:layout_marginTop="18dp"
            android:textSize="18sp"
            android:padding="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/dra_button"
            android:layout_marginEnd="36dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/no_button"
            android:textAllCaps="false"
            android:text="@string/cancel"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="18dp"
            android:layout_marginStart="36dp"
            android:textColor="@color/button_yellow"
            android:background="@drawable/dra_no"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        app:layout_constraintTop_toBottomOf="@id/button"
        android:layout_width="match_parent"
        android:layout_height="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>