<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <com.youth.banner.Banner
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toTopOf="@id/text"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/text"
        android:layout_marginBottom="36dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/indicator"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/img1"
            android:textColor="@color/text_black"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/indicator"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/agree"
        android:layout_marginBottom="24dp"
        android:background="@drawable/dra_button"
        android:text="@string/start"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/white" />
    <LinearLayout
        android:id="@+id/agree"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@id/continues"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/checkbox"
            android:layout_marginBottom="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/goon"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/text_black"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/continues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/agree"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:textColor="@color/text_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>