<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".activity.CheckInActivity">
    <include layout="@layout/mytoolbar"/>
    <com.rebater.cash.well.fun.obb.MyNettedView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/dra_points"
            android:layout_marginTop="12dp">
            <TextView
                android:id="@+id/notice"
                android:layout_marginTop="12dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/sign_dec"
                android:textColor="@color/text_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_sign"
                android:layout_margin="12dp"
                android:background="@color/item_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/sign_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_margin="12dp"
                android:textSize="20sp"
                android:background="@drawable/dra_button"
                android:text="@string/video_sign"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/sign_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:textSize="20sp"
                android:background="@drawable/dra_reward"
                android:text="@string/check"
                android:textColor="@color/toolgreen"/>
        </LinearLayout>
    </com.rebater.cash.well.fun.obb.MyNettedView>
</LinearLayout>